--- a/index_.html
+++ b/index_.html
@@ -7,9 +7,12 @@
 
 	  <title>Kamera</title>
 
+	  <link rel="stylesheet" media="screen" href="ecran.css">
 	</head>
 	<body>
 
-			<img src="image_cam.jpg" />
+		<h2>Kamera</h2>
+			<img src="image_cam.jpg" alt="Chargement ..." />
+		Auto-Refresh every 4s ...
 	</body>
 </html>
